trying to fix again :<

--- a/index.html
+++ b/index.html
@@ -598,16 +598,261 @@
     </div>
 
     <div class="banner" style="margin-top:12px">
-      <strong>RECAP CHALLENGES AND GIVE VALUE STATEMENT</strong> – <br>“IS THERE ANYTHING ELSE I SHOULD KNOW THAT WOULD MAKE THIS TRANSITION BETTER”?</br>
       <strong>RECAP CHALLENGES AND GIVE VALUE STATEMENT</strong> – <br><br>“Is there anything else I should know that would make this transition better?”</br>
       <textarea name="api_value_recap" placeholder="Optional recap…" style="margin-top:10px"></textarea>
     </div>
     <label class="subheader" for="api_impl_date">When are you looking to get this implemented?</label>
-@@ -853,1039 +853,1039 @@
+<input type="date" id="api_impl_date" name="api_impl_date" />
+   <label class="option" id="api_declined_wrap">
+  <input type="checkbox" id="api_declined" name="api_declined" value="Yes" />
+  <div><div class="opt-title">Customer Declined Implementation</div></div>
+</label>
+<textarea id="api_declined_why" name="api_declined_why" placeholder="Why?" class="hidden"></textarea>
+    <br>
+    <br>
+
+
+
+
+    <div class="section-title" style="margin-top:12px">Onboarding Checklist</div>
+    <div class="checklist">
+      <label><input type="checkbox" name="onb" value="Connect Selling Channel"> Connect Selling Channel</label>
+      <label><input type="checkbox" name="onb" value="Set Ship From Location"> Set Ship From Location</label>
+      <label><input type="checkbox" name="onb" value="Set up Carriers"> Set up Carriers</label>
+      <label><input type="checkbox" name="onb" value="Set up Automation (at least 1)"> Set up Automation (at least 1)</label>
+      <label><input type="checkbox" name="onb" value="Discuss/Explain Inventory"> Discuss/Explain Inventory</label>
+      <label><input type="checkbox" name="onb" value="Discuss/Explain Returns"> Discuss/Explain Returns</label>
+      <label><input type="checkbox" name="onb" value="Set up Subscription w/ ACH or Card"> Set up Subscription w/ ACH or Card</label>
+      <label><input type="checkbox" name="onb" value="Configure a Label / Ensure they know how to print"> Configure a Label / Ensure they know how to print</label>
+      <label><input type="checkbox" name="onb" value="Support Resources"> Support Resources</label>
+      <label><input type="checkbox" name="onb" value="Definitive Next Steps / Follow Up"> Definitive Next Steps / Follow Up</label>
+    </div>
+  </section>
+
+  <!-- ==== UI: Discovery + Checklist ==== -->
+  <section class="card hidden" id="sec-ui-discovery">
+    <div id="ui-error" class="error-banner hidden"></div>
+    <div class="section-title">Discovery Basics</div>
+    <div class="discovery-lead">DISCOVERY BASICS: Use these questions to better understand a merchant's business objectives.</div>
+
+    <div class="grid">
+      <label class="subheader" for="ui_disc_q1"><span class="question-number">1.</span> What type of products do you sell?</label>
+      <textarea id="ui_disc_q1" name="ui_disc_q1" placeholder="Rep notes..."></textarea>
+
+      <label class="subheader"><span class="question-number">2.</span> Where do you sell your products today?</label>
+      <!-- TYPEAHEAD MULTI-SELECT (UI) -->
+      <div class="tagpicker" id="uiStorePicker">
+        <div class="tagchips" data-role="chips"></div>
+        <input class="taginput" type="text" placeholder="Start typing a store (e.g., Shopify, Amazon, WooCommerce)…" aria-label="Store search" />
+        <div class="suggest hidden" role="listbox"></div>
+        <div class="tagerror" aria-live="polite"></div>
+        <input type="hidden" name="ui_disc_q2" value="[]">
+      </div>
+
+      <label class="subheader" for="shipments"><span class="question-number">3.</span> How many shipments each month?</label>
+      <select name="shipments" id="shipments">
+        <option value="">Select...</option>
+        <option>10</option><option>50</option><option>100</option><option>500</option>
+        <option>1,000</option><option>2,000</option><option>5,000</option><option>7,500</option>
+        <option>10,000</option><option>15,000</option><option>20,000</option><option>20,000+</option>
+      </select>
+
+      <label class="subheader"><span class="question-number">4.</span> BYOA?</label>
+      <div class="grid cols-2">
+        <label class="option"><input type="radio" name="byoa" value="No"><div><div class="opt-title">No</div></div></label>
+        <label class="option"><input type="radio" name="byoa" value="Yes"><div><div class="opt-title">Yes</div></div></label>
+      </div>
+
+<label class="subheader"><span class="question-number">5.</span> What carriers are you shipping with?</label>
+<div class="tagpicker" id="uiCarrierPicker">
+  <div class="tagchips" data-role="chips"></div>
+  <input class="taginput" type="text" placeholder="Start typing a carrier (e.g., USPS, UPS, FedEx)…" aria-label="Carrier search" />
+  <div class="suggest hidden" role="listbox"></div>
+  <div class="tagerror" aria-live="polite"></div>
+  <input type="hidden" name="ui_disc_carriers" value="[]">
+</div>
+
+      <label class="subheader"><span class="question-number">6.</span> Do you ship internationally?</label>
+      <div class="grid cols-2">
+        <label class="option"><input type="radio" name="intl" value="No"><div><div class="opt-title">No</div></div></label>
+        <label class="option"><input type="radio" name="intl" value="Yes"><div><div class="opt-title">Yes</div></div></label>
+      </div>
+
+      <label class="subheader" for="ui_disc_q6"><span class="question-number">7.</span> How are you managing inventory?</label>
+      <textarea id="ui_disc_q6" name="ui_disc_q6" placeholder="Rep notes..."></textarea>
+
+      <fieldset>
+        <legend><span class="question-number">7a.</span> Inventory management level?</legend>
+        <label class="option"><input type="radio" name="inv" value="None"><div><div class="opt-title">None</div></div></label>
+        <label class="option"><input type="radio" name="inv" value="Product Catalog and Inventory Grid"><div><div class="opt-title">Product Catalog and Inventory Grid</div></div></label>
+        <label class="option">
+          <input type="radio" name="inv" value="Basic Inventory Management">
+          <div>
+            <div class="opt-title">Basic Inventory Management</div>
+            <details class="question-details">
+              <summary>View included features</summary>
+              <div class="details-content">
+                <div class="details-title">Included Features:</div>
+                <ul class="feature-list">
+                  <li>Product Catalog</li>
+                  <li>Inventory Grid</li>
+                  <li>Bundles</li>
+                  <li>Lot Tracking</li>
+                  <li>Inventory Sync Out</li>
+                  <li>Inventory Sync In (Coming Soon)</li>
+                </ul>
+              </div>
+            </details>
+          </div>
+        </label>
+        <label class="option">
+          <input type="radio" name="inv" value="Advanced Inventory Management">
+          <div>
+            <div class="opt-title">Advanced Inventory Management</div>
+            <details class="question-details">
+              <summary>View included features</summary>
+              <div class="details-content">
+                <div class="details-title">Included Features:</div>
+                <ul class="feature-list">
+                  <li>All Basic Inventory Features</li>
+                  <li>Scan to Audit (Coming Soon)</li>
+                  <li>Stock Transfer (Coming Soon)</li>
+                  <li>Purchase Orders (Coming Soon)</li>
+                  <li>Scan to Receive (Coming Soon)</li>
+                  <li>Forecasting (Coming Soon)</li>
+                </ul>
+              </div>
+            </details>
+          </div>
+        </label>
+      </fieldset>
+
+      <fieldset>
+        <legend><span class="question-number">7b.</span> Warehouse management level?</legend>
+        <label class="option"><input type="radio" name="wm" value="Standard packing slips"><div><div class="opt-title">Standard packing slips</div></div></label>
+        <label class="option"><input type="radio" name="wm" value="Standard Pick Lists and Packing Slips"><div><div class="opt-title">Standard Pick Lists and Packing Slips</div></div></label>
+        <label class="option">
+          <input type="radio" name="wm" value="Advanced Warehouse Management">
+          <div>
+            <div class="opt-title">Advanced Warehouse Management</div>
+            <details class="question-details">
+              <summary>View included features</summary>
+              <div class="details-content">
+                <div class="details-title">Included Features:</div>
+                <ul class="feature-list">
+                  <li>Standard Pick Lists and Packing Slips</li>
+                  <li>Packing Slips (Customized)</li>
+                  <li>Barcode Scanning (Scan Page Access and Reports Page)</li>
+                  <li>Hot Keys: Barcode Actions and Custom Hot Keys</li>
+                  <li>Mobile Picking App: Basic Picking – Batch Picking (Coming Soon)</li>
+                  <li>Warehouse Dashboard and Picker Reports (Coming Soon)</li>
+                  <li>Mobile Packing (Coming Soon)</li>
+                </ul>
+              </div>
+            </details>
+          </div>
+        </label>
+        <label class="option">
+          <input type="radio" name="wm" value="All Warehouse Management features">
+          <div>
+            <div class="opt-title">All Warehouse Management features</div>
+            <details class="question-details">
+              <summary>View included features</summary>
+              <div class="details-content">
+                <div class="details-title">Included Features:</div>
+                <ul class="feature-list">
+                  <li>All Advanced Warehouse Features</li>
+                  <li>Mobile Picking App: Pick to Tote (Coming Soon)</li>
+                  <li>Cartonization (Coming Soon)</li>
+                  <li>Pick to Light (Coming Soon)</li>
+                  <li>Cubiscan (Coming Soon)</li>
+                </ul>
+              </div>
+            </details>
+          </div>
+        </label>
+      </fieldset>
+
+      <label class="subheader" for="ui_disc_q7"><span class="question-number">8.</span> How are you managing returns?</label>
+      <textarea id="ui_disc_q7" name="ui_disc_q7" placeholder="Rep notes..."></textarea>
+
+      <fieldset>
+        <legend><span class="question-number">8b.</span> Advanced return and exchange options?</legend>
+        <label class="option"><input type="radio" name="returns" value="No"><div><div class="opt-title">No</div></div></label>
+        <label class="option"><input type="radio" name="returns" value="Yes"><div><div class="opt-title">Yes</div></div></label>
+      </fieldset>
+
+      <!-- Remaining Users + Feature questions appended here -->
+      <fieldset>
+        <legend><span class="question-number">9.</span> How many users do you need?</legend>
+        <div class="grid cols-2 extra-gap with-divider">
+          <label class="option"><input type="radio" name="users" value="1 User"><div><div class="opt-title">1 User</div></div></label>
+          <label class="option"><input type="radio" name="users" value="2-3 Users"><div><div class="opt-title">2–3 Users</div></div></label>
+          <label class="option"><input type="radio" name="users" value="4-10 Users"><div><div class="opt-title">4–10 Users</div></div></label>
+          <label class="option"><input type="radio" name="users" value="11-15 Users"><div><div class="opt-title">11–15 Users</div></div></label>
+        </div>
+      </fieldset>
+
+      <fieldset>
+        <legend><span class="question-number">10.</span> Unlimited rule automations?</legend>
+        <label class="option"><input type="radio" name="rules" value="No"><div><div class="opt-title">No</div></div></label>
+        <label class="option"><input type="radio" name="rules" value="Yes"><div><div class="opt-title">Yes</div></div></label>
+      </fieldset>
+
+      <fieldset>
+        <legend><span class="question-number">11.</span> Auto Routing or Auto Split?</legend>
+        <label class="option"><input type="radio" name="routing" value="No"><div><div class="opt-title">No</div></div></label>
+        <label class="option"><input type="radio" name="routing" value="Yes"><div><div class="opt-title">Yes</div></div></label>
+      </fieldset>
+
+      <fieldset>
+        <legend><span class="question-number">12.</span> Rate Shopper?</legend>
+        <label class="option"><input type="radio" name="rates" value="Freemium Rate Shopper"><div><div class="opt-title">Freemium Rate Shopper</div></div></label>
+        <label class="option"><input type="radio" name="rates" value="Advanced Rate Shopper"><div><div class="opt-title">Advanced Rate Shopper</div></div></label>
+      </fieldset>
+
+      <fieldset>
+        <legend><span class="question-number">13.</span> ODBC?</legend>
+        <label class="option"><input type="radio" name="odbc" value="No"><div><div class="opt-title">No</div></div></label>
+        <label class="option"><input type="radio" name="odbc" value="Yes"><div><div class="opt-title">Yes</div></div></label>
+      </fieldset>
+
+      <fieldset>
+        <legend><span class="question-number">14.</span> API Access?</legend>
+        <label class="option"><input type="radio" name="api_access" value="No"><div><div class="opt-title">No</div></div></label>
+        <label class="option"><input type="radio" name="api_access" value="Yes"><div><div class="opt-title">Yes</div></div></label>
+      </fieldset>
+
+      <fieldset>
+        <legend><span class="question-number">15.</span> Phone Support or Dedicated AM?</legend>
+        <label class="option"><input type="radio" name="support" value="No"><div><div class="opt-title">No</div></div></label>
+        <label class="option"><input type="radio" name="support" value="Phone Support"><div><div class="opt-title">Phone Support</div></div></label>
+        <label class="option"><input type="radio" name="support" value="Dedicated AM"><div><div class="opt-title">Dedicated Account Manager</div></div></label>
+      </fieldset>
+    </div>
+
+    <div class="section-title" style="margin-top:16px">Process Discovery</div>
+    <div class="discovery-lead">PROCESS DISCOVERY - GET VERY SPECIFIC!</div>
+
+    <label class="subheader" for="ui_proc_q11">From cart to door, what does your fulfillment process look like?</label>
+    <textarea id="ui_proc_q11" name="ui_proc_q11" placeholder="Rep notes..."></textarea>
+
+    <div class="grid cols-2 extra-gap">
+      <div>
+        <label class="subheader" for="ui_proc_pain1">Pain/Challenge 1</label>
+        <textarea id="ui_proc_pain1" name="ui_proc_pain1" placeholder="Rep notes..."></textarea>
+      </div>
+      <div>
+        <label class="subheader" for="ui_proc_pain2">Pain/Challenge 2 (optional)</label>
+        <textarea id="ui_proc_pain2" name="ui_proc_pain2" placeholder="Optional"></textarea>
+      </div>
+    </div>
+    <div>
+      <label class="subheader" for="ui_proc_pain3">Pain/Challenge 3 (optional)</label>
+      <textarea id="ui_proc_pain3" name="ui_proc_pain3" placeholder="Optional"></textarea>
     </div>
 
     <div class="banner" style="margin-top:12px">
-      <strong>RECAP CHALLENGES AND GIVE VALUE STATEMENT</strong> – <br>“IS THERE ANYTHING ELSE I SHOULD KNOW THAT WOULD MAKE THIS TRANSITION BETTER”?</br>
       <strong>RECAP CHALLENGES AND GIVE VALUE STATEMENT</strong> – <br><br>“Is there anything else I should know that would make this transition better?"</br>
       <textarea name="ui_value_recap" placeholder="Optional recap…" style="margin-top:10px"></textarea>
     </div>
@@ -1615,9 +1860,9 @@ var apiCarrierEl = q('#apiCarrierPicker');
 var uiCarrierEl  = q('#uiCarrierPicker');
 if(apiCarrierEl){ window.apiCarrierPicker = new TagPicker(apiCarrierEl, { items: CARRIER_INTEGRATIONS }); }
 if(uiCarrierEl){  window.uiCarrierPicker  = new TagPicker(uiCarrierEl,  { items: CARRIER_INTEGRATIONS }); }
-
+  
 })();
-
+  
   // Toggle ONLY the "Customer Declined Implementation" UI (red + Why? notes)
 function setupDeclined(prefix){
   var box  = document.getElementById(prefix + '_declined');
